--- a/src/styles/fighterPreview.css
+++ b/src/styles/fighterPreview.css
@@ -20,7 +20,7 @@
     font-weight: 700;
     letter-spacing: 2px;
     text-transform: uppercase;
-
+    width: 300px;
 }
 .health{
     color: #ba0303;
